# basics

./: CHANGELOG.md  basics.cabal
src/Basics/: ArrayArray.hs  BitBool.hs  Bool.hs  ByteArray.hs  ByteArrays.hs  Char.hs  Int.hs  Int1.hs  Int64.hs  Int8.hs  ShortText.hs  ShortTexts.hs  Word.hs  Word128.hs  Word128s.hs  Word16.hs  Word256.hs  Word32.hs  Word64.hs  Word8.hs
src/Data/: Int1.hs
test/: BitBool.hs  Int1.hs  Main.hs
