cabal-version: 2.2
name: basics
version: 0.1.0.0
synopsis: Modules for primitive types
-- description:
homepage: https://github.com/andrewthad/basics
bug-reports: https://github.com/andrewthad/basics/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Basics.Bool
    Basics.ByteArray
    Basics.Char
    Basics.Int
    Basics.Int8
    Basics.Int64
    Basics.Word
    Basics.Word8
    Basics.Word16
    Basics.Word32
    Basics.Word64
    Basics.Word128
  build-depends:
    , base >=4.12.0.0 && <5
    , primitive >=0.7 && <0.8
    , wide-word
  hs-source-dirs: src
  ghc-options: -Wall -O2
  default-language: Haskell2010
