cabal-version: 2.2
name: basics
version: 0.1.0.0
synopsis: Modules for primitive types
-- description:
homepage: https://github.com/andrewthad/basics
bug-reports: https://github.com/andrewthad/basics/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2019 Andrew Martin
category: Data
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Basics.ArrayArray
    Basics.Bool
    Basics.ByteArray
    Basics.Char
    Basics.Int
    Basics.Int8
    Basics.Int64
    Basics.ShortText
    Basics.ShortTexts
    Basics.Word
    Basics.Word8
    Basics.Word16
    Basics.Word32
    Basics.Word64
    Basics.Word128
    Basics.Word256
  build-depends:
    , base >=4.12.0.0 && <5
    , primitive >=0.7 && <0.8
    , primitive-unlifted >=0.1.2 && <0.2
    , text-short >=0.1.3 && <0.2
    , bytestring >=0.10.8 && <0.11
    , bifunctors >=5.5.4 && <5.6
    , wide-word >=0.1.1
  hs-source-dirs: src
  ghc-options: -Wall -O2
  default-language: Haskell2010
